icon explicit min height/width to fix collapsing in safari

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -28,6 +28,11 @@
   align-items: center;
 }
 
+.icon {
+  min-width: 50px;
+  min-height: 50px;
+}
+
 .icon.orange {
   fill: orange;
 }
